# zeitgeist-data-source-gala

./: .gitignore  CHANGELOG.md  README.md  commitlint.config.js  meson.build  package-lock.json  package.json
data/: meson.build  zeitgeist-data-source-gala.desktop  zeitgeist-logger-gala.desktop
lib/: Main.vala  meson.build
meta/: README.md.njk
vapi/: config.vapi
